WebApi upload code

--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Security\Users\" />
+    <Folder Include="WebApi\Upload\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Html\Resources\SmallPage.htm" />
