--- a/source/Example.MvcApplication/Example.MvcApplication.csproj
+++ b/source/Example.MvcApplication/Example.MvcApplication.csproj
@@ -162,7 +162,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Api\Controllers\BlogController.cs" />
     <Compile Include="Api\Controllers\SessionController.cs" />
-    <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\BlogEntryInfoModel.cs" />
     <Compile Include="Models\BlogEntryModel.cs" />
     <Compile Include="Global.asax.cs">
@@ -177,13 +177,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BlogReadService.cs" />
     <Compile Include="Services\IBlogReadService.cs" />
+    <Compile Include="Services\Models\BlogEntry.cs" />
+    <Compile Include="Services\Models\BlogEntryInfo.cs" />
+    <Compile Include="Services\Models\BlogSearch.cs" />
+    <Compile Include="Services\Models\SearchSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="..\Antix.WebApi.Upload\JavaScript\jquery.upload.js">
+      <Link>Scripts\jquery.upload.js</Link>
+    </Content>
     <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\rivets.js" />
+    <Content Include="Scripts\watch.js" />
     <Content Include="Unity.WebAPI.README.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -194,6 +203,8 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\Blog\Read.cshtml" />
+    <None Include="Properties\PublishProfiles\Richmond.pubxml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
