--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Logging\ilogger_tests.cs" />
     <Compile Include="Security\Sessions\SessionServiceLoginTest.cs" />
     <Compile Include="Security\Sessions\SessionServiceLogoutTest.cs" />
+    <Compile Include="StringSearchTests.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrimEndTests.cs" />
