--- a/source/Antix.Tests/App.config
+++ b/source/Antix.Tests/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="staticData">
-      <section name="phoneSettings" type="Antix.Data.Static.PhoneSettings, Antix.Data.Static" requirePermission="false" allowLocation="true" allowDefinition="Everywhere" />
+      <section name="phoneSettings" type="Antix.Data.Static.PhoneConfigurationSection, Antix.Data.Static" requirePermission="false" allowLocation="true" allowDefinition="Everywhere" />
     </sectionGroup>
   </configSections>
 
