nuget monkey business
sorting out the nuspecs to include code files and dependencies
moved code to new Security and Services packages

--- a/source/.nuget/NuGet.Config
+++ b/source/.nuget/NuGet.Config
@@ -4,4 +4,8 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+
+  <packageSources>
+    <add key="Local.Nuget" value="..\..\..\antix\nuget\Packages\" />
+  </packageSources>
 </configuration>
