--- a/source/Antix.Data.Keywords/Antix.Data.Keywords.code.nuspec
+++ b/source/Antix.Data.Keywords/Antix.Data.Keywords.code.nuspec
@@ -14,13 +14,10 @@
     <copyright>Copyright Antix Software Limited 2013</copyright>
     <tags>Keyword indexing</tags>
     <dependencies>
-      <dependency id="Antix.code"/>
+      <dependency id="Antix.code" version="$version$"/>
     </dependencies>
   </metadata>
   <files>
-    <file src="*.cs" target="content\Antix\Data\Keywords" />
-    <file src="Entities\*.cs" target="content\Antix\Data\Keywords\Entities" />
-    <file src="Processing\*.cs" target="content\Antix\Data\Keywords\Processing" />
-    <file src="Stemming\*.cs" target="content\Antix\Data\Keywords\Stemming" />
+    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
