--- a/source/Antix.Data.Static/Antix.Data.Static.code.nuspec
+++ b/source/Antix.Data.Static/Antix.Data.Static.code.nuspec
@@ -15,10 +15,6 @@
     <tags>Static Data Code, Phone numbers</tags>
   </metadata>
   <files>
-    <file src="Phone.cs" target="content\Antix\Data\Static" />
-    <file src="PhoneConfigurationSection.cs" target="content\Antix\Data\Static" />
-    <file src="PhoneCountryConfiguration.cs" target="content\Antix\Data\Static" />
-    <file src="PhoneCountryConfigurations.cs" target="content\Antix\Data\Static" />
-    <file src="config-example.txt" target="content\Antix\Data\Static" />
+    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
