--- a/source/Antix.Data/Antix.Data.code.nuspec
+++ b/source/Antix.Data/Antix.Data.code.nuspec
@@ -14,10 +14,10 @@
     <copyright>Copyright Antix Software Limited 2013</copyright>
     <tags>Data</tags>
     <dependencies>
-      <dependency id="Antix.code"/>
+      <dependency id="Antix.code" version="$version$"/>
     </dependencies>
   </metadata>
   <files>
-    <file src="*.cs" target="content\Antix\Data" />
+    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
