--- a/source/Antix.Html/Antix.Html.code.nuspec
+++ b/source/Antix.Html/Antix.Html.code.nuspec
@@ -14,12 +14,11 @@
     <copyright>Copyright Antix Software Limited 2013</copyright>
     <tags>Common Code, Html Parsing</tags>
     <dependencies>
-      <dependency id="Antix.code"/>
+      <dependency id="Antix.code" version="$version$"/>
     </dependencies>
   </metadata>
   <files>
-    <file src="**\Html*.cs" target="content\Antix\Html" exclude="**\*.Designer.cs" />
-    <file src="**\Html*.settings" target="content\Antix\Html" />
+    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
     <file src="..\..\nuget\Install.ps1" target="tools" />
   </files>
 </package>
