--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -80,32 +80,13 @@
     <Compile Include="StringSearch.cs" />
     <Compile Include="IO\IOExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-    <Compile Include="Security\IHashService.cs" />
-    <Compile Include="Security\Sessions\ISessionDataService.cs" />
-    <Compile Include="Security\Sessions\ISessionService.cs" />
-    <Compile Include="Security\MD5HashService.cs" />
-    <Compile Include="Security\Sessions\Session.cs" />
-    <Compile Include="Security\Sessions\SessionService.cs" />
-    <Compile Include="Security\Sessions\SessionServiceSettings.cs" />
-    <Compile Include="Security\Sessions\SessionUser.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <Compile Include="Logging\Log.Event.cs" />
-    <None Include="Properties\Settings.settings">
-      <Generator>PublicSettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Security\Users\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
