--- a/source/Antix.Data.Keywords.EF/Antix.Data.Keywords.EF.code.nuspec
+++ b/source/Antix.Data.Keywords.EF/Antix.Data.Keywords.EF.code.nuspec
@@ -20,6 +20,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
+    <file src="**" target="content\Keywords\EF" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
