--- a/source/Antix.Data.Static/Antix.Data.Static.code.nuspec
+++ b/source/Antix.Data.Static/Antix.Data.Static.code.nuspec
@@ -15,6 +15,6 @@
     <tags>Static Data Code, Phone numbers</tags>
   </metadata>
   <files>
-    <file src="**" target="content\Antix" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
+    <file src="**" target="content\Data\Static" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
