--- a/source/Antix.Data.Keywords/Antix.Data.Keywords.code.nuspec
+++ b/source/Antix.Data.Keywords/Antix.Data.Keywords.code.nuspec
@@ -18,6 +18,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="**" target="content\Keywords" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
+    <file src="**" target="content\Data\Keywords" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
