EF keyword update and delete fixed
tests added

--- a/source/Antix.Data.Keywords.EF/Antix.Data.Keywords.EF.csproj
+++ b/source/Antix.Data.Keywords.EF/Antix.Data.Keywords.EF.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EFEntityState.cs" />
     <Compile Include="EFKeywordsManager.cs" />
     <Compile Include="Entities\IndexedEntityKeyword.cs" />
     <Compile Include="Entities\IndexedEntity.cs" />
