--- a/source/Antix.Security/Antix.Security.csproj
+++ b/source/Antix.Security/Antix.Security.csproj
@@ -42,12 +42,6 @@
     <Compile Include="IHashService.cs" />
     <Compile Include="MD5HashService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sessions\ISessionDataService.cs" />
-    <Compile Include="Sessions\ISessionService.cs" />
-    <Compile Include="Sessions\Session.cs" />
-    <Compile Include="Sessions\SessionService.cs" />
-    <Compile Include="Sessions\SessionServiceSettings.cs" />
-    <Compile Include="Sessions\SessionUser.cs" />
     <Compile Include="SecuritySettings.Designer.cs">
       <DependentUpon>SecuritySettings.settings</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -62,6 +56,12 @@
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>SecuritySettings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Antix.Services\Antix.Services.csproj">
+      <Project>{DBCDF4E5-B883-4B11-869E-B7D9D36D899B}</Project>
+      <Name>Antix.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
