--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Html\Services\StringHtmlReader.cs" />
     <Compile Include="Html\TextTest.cs" />
     <Compile Include="Logging\log_tests.cs" />
+    <Compile Include="Services\ActionCache\ActionCacheTests.cs" />
     <Compile Include="StringSearchTests.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,6 +118,14 @@
     <ProjectReference Include="..\Antix.Security\Antix.Security.csproj">
       <Project>{098AC085-ED76-4EF7-BA88-99AEC66E4E35}</Project>
       <Name>Antix.Security</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Antix.Services.ActionCache\Antix.Services.ActionCache\Antix.Services.ActionCache.csproj">
+      <Project>{211F08F9-A271-4ED5-9A65-A17AD0EF9AD4}</Project>
+      <Name>Antix.Services.ActionCache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Antix.Services\Antix.Services.csproj">
+      <Project>{DBCDF4E5-B883-4B11-869E-B7D9D36D899B}</Project>
+      <Name>Antix.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\Antix.Web\Antix.Web.csproj">
       <Project>{44CEEA48-C485-4E8E-B405-A46910A8EBA3}</Project>
