--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -119,7 +119,7 @@
       <Project>{098AC085-ED76-4EF7-BA88-99AEC66E4E35}</Project>
       <Name>Antix.Security</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Antix.Services.ActionCache\Antix.Services.ActionCache\Antix.Services.ActionCache.csproj">
+    <ProjectReference Include="..\Antix.Services.ActionCache\Antix.Services.ActionCache.csproj">
       <Project>{211F08F9-A271-4ED5-9A65-A17AD0EF9AD4}</Project>
       <Name>Antix.Services.ActionCache</Name>
     </ProjectReference>
