--- a/source/Antix.Http/Antix.Http.csproj
+++ b/source/Antix.Http/Antix.Http.csproj
@@ -53,7 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Filters\Logging\ActionLogEntry.cs" />
+    <Compile Include="Filters\Logging\ActionRequestEntry.cs" />
+    <Compile Include="Filters\Logging\ActionResponseEntry.cs" />
     <Compile Include="HttpRequestMessageExtensions.cs" />
     <Compile Include="Dispatcher\ServiceHttpControllerActivator.cs" />
     <Compile Include="Filters\FilterServiceBase.cs" />
