added response model

--- a/source/Antix.Http/Antix.Http.csproj
+++ b/source/Antix.Http/Antix.Http.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Filters\Logging\LogActionAttribute.cs" />
     <Compile Include="Filters\Logging\LogActionFilter.cs" />
     <Compile Include="Filters\ServiceFilterProvider.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
