added install.ps1 to run custom code generator on settings

--- a/source/Antix.Services.ActionCache/Antix.Services.ActionCache.code.nuspec
+++ b/source/Antix.Services.ActionCache/Antix.Services.ActionCache.code.nuspec
@@ -20,5 +20,6 @@
   </metadata>
   <files>
     <file src="**" target="content\Services\ActionCache" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
+    <file src="..\..\nuget\Install.ps1" target="tools" />
   </files>
 </package>
