Response Errors Summary extension

--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="Models\Response.cs" />
     <Compile Include="Models\ResponseError.cs" />
+    <Compile Include="Models\ResponseExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHandler.cs" />
   </ItemGroup>
