--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -42,8 +42,7 @@
     <Compile Include="IService.cs" />
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="Models\Response.cs" />
-    <Compile Include="Models\ResponseError.cs" />
-    <Compile Include="Models\ResponseExtensions.cs" />
+    <Compile Include="Models\ResponseErrorCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHandler.cs" />
   </ItemGroup>
