--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -81,6 +81,7 @@
     <Compile Include="IO\IOExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Xml\DynamicXml.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
