--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -74,6 +74,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\IFileChangeWatcher.cs" />
+    <Compile Include="IO\FileChangeWatcher.cs" />
+    <Compile Include="IO\FileChangedEvent.cs" />
+    <Compile Include="IO\FileChangedEventType.cs" />
+    <Compile Include="IO\FileChangeWatcherOptions.cs" />
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Logging\Log.Delegates.cs" />
     <Compile Include="Logging\Log.Extensions.cs" />
@@ -81,6 +86,7 @@
     <Compile Include="IO\IOExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Timers\Schedule.cs" />
     <Compile Include="Xml\DynamicXml.cs" />
   </ItemGroup>
   <ItemGroup>
