--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Html\Services\QueueHtmlReader.cs" />
     <Compile Include="Html\Services\StringHtmlReader.cs" />
     <Compile Include="Html\TextTest.cs" />
-    <Compile Include="IO\FileChangedWatcherTest.cs" />
+    <Compile Include="IO\FileSystemChangeMonitorTest.cs" />
     <Compile Include="Logging\log_tests.cs" />
     <Compile Include="Services\ActionCache\ActionCacheTests.cs" />
     <Compile Include="StringSearchTests.cs" />
