trigger events in the interface

--- a/source/Antix/Antix.csproj
+++ b/source/Antix/Antix.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\FileSystemChangeMonitorExtensions.cs" />
     <Compile Include="IO\IFileSystemChangeMonitor.cs" />
     <Compile Include="IO\FileSystemChangeMonitor.cs" />
     <Compile Include="IO\FileSystemChangedEvent.cs" />
