--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrimEndTests.cs" />
     <Compile Include="Web\PersistentOutputCacheTests.cs" />
+    <Compile Include="Xml\DynamicXmlTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
