--- a/source/Antix.SignalR/Antix.SignalR.code.nuspec
+++ b/source/Antix.SignalR/Antix.SignalR.code.nuspec
@@ -7,7 +7,7 @@
     <authors>Anthony Johnston</authors>
     <owners>Antix Software Limited</owners>
     <licenseUrl>https://raw.github.com/MrAntix/antix/master/LICENCE.md</licenseUrl>
-    <projectUrl>https://github.com/MrAntix/antix/</projectUrl>
+    <projectUrl>https://github.com/MrAntix/antix/tree/master/source/Antix.SignalR</projectUrl>
     <iconUrl>https://raw.github.com/MrAntix/antix/master/graphics/antix_32x32.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Antix Common SignalR Code</description>
@@ -18,6 +18,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="**" target="content\Services" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
+    <file src="**" target="content\SignalR" exclude="bin\**\*;obj\**\*;**\assemblyinfo.cs;**\*.designer.cs;**\*.csproj;**\*.user;**\*.config" />
   </files>
 </package>
