--- a/source/Antix.Tests/packages.config
+++ b/source/Antix.Tests/packages.config
@@ -3,7 +3,10 @@
 <packages>
   <package id="antix-testing" version="4.0.0-b01" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
