--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -43,8 +43,10 @@
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="Models\IServiceResponse.cs" />
     <Compile Include="Models\IServiceResponseWithData.cs" />
-    <Compile Include="Models\ServiceResponse.cs" />
     <Compile Include="Models\ServiceErrorCollection.cs" />
+    <Compile Include="Models\ServiceResponse.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\ServiceResponseWithData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHandler.cs" />
