--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="Models\IServiceResponse.cs" />
     <Compile Include="Models\IServiceResponseExtensions.cs" />
+    <Compile Include="Models\ServiceErrorCollection.cs" />
     <Compile Include="Models\ServiceResponse.cs">
       <SubType>Code</SubType>
     </Compile>
