--- a/source/Antix.Code.Web/antix.cellLayout.angularjs.nuspec
+++ b/source/Antix.Code.Web/antix.cellLayout.angularjs.nuspec
@@ -18,6 +18,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Scripts\antix\cell-layout\**" target="Content\Scripts\antix\cell-layout" />
+    <file src="Scripts\antix\cell-layout\**" exclude="*.png;readme.md" target="Content\Scripts\antix\cell-layout" />
   </files>
 </package> 
