--- a/source/Antix.Services/Antix.Services.csproj
+++ b/source/Antix.Services/Antix.Services.csproj
@@ -50,6 +50,42 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHandler.cs" />
     <Compile Include="ServiceSyncExtensions.cs" />
+    <Compile Include="Validation\ExpressionPathVisitor.cs" />
+    <Compile Include="Validation\IValidationAssertionBuilder.cs" />
+    <Compile Include="Validation\IValidationBuilder.cs" />
+    <Compile Include="Validation\IValidationRuleBuilder.cs" />
+    <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\Predicates\EmailPredicate.cs" />
+    <Compile Include="Validation\Predicates\FunctionPredicate.cs" />
+    <Compile Include="Validation\Predicates\IObjectPredicates.cs" />
+    <Compile Include="Validation\Predicates\IStandardValidationPredicates.cs" />
+    <Compile Include="Validation\Predicates\IStringPredicates.cs" />
+    <Compile Include="Validation\Predicates\IValidationPredicate.cs" />
+    <Compile Include="Validation\Predicates\NullPredicate.cs" />
+    <Compile Include="Validation\Predicates\NumberPredicates.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>NumberPredicates.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Validation\Predicates\StandardValidationPredicates.cs" />
+    <Compile Include="Validation\Predicates\StringPredicates.cs" />
+    <Compile Include="Validation\Predicates\ValidationPredicateBase.cs" />
+    <Compile Include="Validation\Predicates\ValidationPredicateCache.cs" />
+    <Compile Include="Validation\ValidationAssertionBuilder.cs" />
+    <Compile Include="Validation\ValidationAssertionList.cs" />
+    <Compile Include="Validation\ValidationConstants.cs" />
+    <Compile Include="Validation\ValidationExtensions.cs" />
+    <Compile Include="Validation\ValidationRuleBuilder.cs" />
+    <Compile Include="Validation\ValidatorBase.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Validation\Predicates\NumberPredicates.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>NumberPredicates.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
