--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Logging\log_tests.cs" />
     <Compile Include="Services\ActionCache\ActionCacheTests.cs" />
     <Compile Include="Services\Models\ServiceResponseTest.cs" />
+    <Compile Include="Services\Validation\ValidationTests.cs" />
     <Compile Include="StringSearchTests.cs" />
     <Compile Include="Timers\ScheduleTest.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
