--- a/source/Antix.Tests/Antix.Tests.csproj
+++ b/source/Antix.Tests/Antix.Tests.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Services\ActionCache\ActionCacheTests.cs" />
     <Compile Include="Services\Models\ServiceResponseTest.cs" />
     <Compile Include="Services\Validation\ValidationTests.cs" />
+    <Compile Include="Services\Validation\ValidatorBaseTest.cs" />
     <Compile Include="StringSearchTests.cs" />
     <Compile Include="Timers\ScheduleTest.cs" />
     <Compile Include="ToSafeFileNameTests.cs" />
